# claude-youtube-transcript

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
infra/: backend.tf  main.tf  outputs.tf  variables.tf
scripts/: _lib.sh  bootstrap-tfstate.sh  bootstrap.sh  deploy.sh  destroy.sh  smoke-test.sh
src/: lambda_function.py
tasks/: plan.md  todo.md
tests/: test_lambda_function.py
