[project]
name = "claude-yt-companion"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "yt-dlp>=2024.1.1",
    "youtube-transcript-api>=0.6.3",
]


[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "boto3>=1.34",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
